// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. already @flow 1`] = `
"
// @flow
const a = 1

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
const a = 1;
"
`;

exports[`1. remove comments 1`] = `
"
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓


"
`;

exports[`2. add comments 1`] = `
"
\\"use strict\\";

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
\\"use strict\\";
"
`;

exports[`3. func 1`] = `
"
function sum(a, b) { return a + b; }

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
function sum(a, b) {
  return a + b;
}
"
`;

exports[`4. var 1`] = `
"
const a = 2

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
const a = 2;
"
`;
